=========
Changelog
=========

1.0b4 (unreleased)
==================

- Major refactoring of internal data structures to simplify and improve test
  coverage. Some breakage to be expected:

  * Components do not have a 'service' attribute any longer. If you need access
    to the service base directory use 'environment.base_dir'.

- Another attempt at getting convergency for package installation: actually
  leverage pkg_resources to check what version of a package is installed. PIP
  does not necessarily list or freeze setuptools, even if forced to reinstall.

- Remove superfluous '--update' from pip calls that would temporarily install
  the incorrect package version.

- Improve convenience of the 'secrets-edit' wrapper script to allow
  re-encrypting without re-entering the editor.

- Consistently switch to using setuptools.

- Fix #12399: incorrect stat attributes for Owner and Group

- Add ``exclude`` parameter to Directory component.


1.0b3 (2013-07-09)
==================

- Enable logging in the remote core to see what's going on on the remote side.

- Try to better format exceptions from the remote side.

- Try harder to get virtualenv back into a working state.

- Allow remote deployments from root of repository.

- Make PIP management more robust.

1.0b2 (2013-07-09)
==================

- Add component to manage PIP within a virtual env.

- Add component to manage packages with PIP within a virtual env.

- Restructure buildout component to make it more robust regarding
  setuptools/distribute preparation. Also remove usage of bootstrap completely
  as we rely on virtualenv anyway.


1.0b1 (2013-07-09)
==================

- Apply semantic versioning: initial development is over, so this is 1.0 now.

- Major revamp of secrets management:

  - switch to GPG (instead of aespipe)

  - turn secrets into a core feature, removing the need for a special component

- Add '--single' to suppress parallel bootstrapping.


0.2.9 (2013-07-06)
==================
